# gochurch

./: .dockerignore  .env.example  .gitignore  PROJECT_STRUCTURE.md  README.md  TEST_SETUP_GUIDE.md  database.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup_tests.sh  start.sh
app/: models.py
app/action/: models.py  router.py  schemas.py  service.py
app/church/: models.py  router.py  schemas.py  service.py
app/community/: models.py  router.py  schemas.py  service.py
app/settings/: models.py  router.py  schemas.py  service.py
app/signin/: router.py  schemas.py  service.py
app/user/: models.py  router.py  schemas.py  service.py
config/: alembic.ini  config.py
docs/: README_NEW.md  README_UUID_SCHEMA.md  SWAGGER_DOCS.md  TESTING_GUIDE.md  TEST_DATABASE_GUIDE.md  TEST_DATABASE_SETUP.md  TROUBLESHOOTING.md
ops/: .env.docker  DOCKER_GUIDE.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.dev  README.md  deploy.sh  dev.sh  docker-compose.dev.yml  docker-compose.yml  init-db.sql
scripts/: generate_mock_community.py  generate_mock_user.py  generate_sample_data.py  manage_test_db.py  migrate_to_modular.py  migrate_to_uuid_schema.py  remove_all_data.py  run_dev_tests.py  run_tests.py  setup_db.py  setup_environment.py  setup_environment.sh  setup_test_db_host.py  setup_test_environment.py  setup_uuid_alternative.py  test_api_manually.py  test_api_with_testdb.py
tests/: conftest.py  test_churches.py  test_community.py  test_sample_data.py  test_users.py  test_verification_actions.py
workers/: celery_app.py  tasks.py
(+9 files in other folders)
